added zip file examples, better doc for some methods